--- a/BrideyApp/BrideyApp/Views/Account/ForgotPassword.cshtml
+++ b/BrideyApp/BrideyApp/Views/Account/ForgotPassword.cshtml
@@ -29,7 +29,7 @@
                 </p>
                 <form class="lost_reset_password" method="post" asp-controller="Account" asp-action="ForgotPassword">
                     <label for="user_login">Username or email</label>
-                    <input class="input-text" type="email" asp-for="Email">
+                    <input class="input-text"  asp-for="Email">
                     <span class="text-danger" asp-validation-for="Email"></span>
                     <button type="submit">Reset password</button>
                 </form>
@@ -40,3 +40,6 @@
     </section>
 </main>
 <!-- End Main -->
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+}
