--- a/BrideyApp/BrideyApp/Views/Account/Login.cshtml
+++ b/BrideyApp/BrideyApp/Views/Account/Login.cshtml
@@ -49,6 +49,7 @@
 </main>
 <!-- Main End -->
 @section Scripts {
+    <partial name="_ValidationScriptsPartial" />
     <script src="~/assets/js/login.js"></script>
 }
 
