--- a/BrideyApp/BrideyApp/Views/Account/ResetPassword.cshtml
+++ b/BrideyApp/BrideyApp/Views/Account/ResetPassword.cshtml
@@ -1,43 +1,37 @@
-﻿@model ForgotPasswordVM
-@inject ILayoutService layout;
-
+﻿@model ResetPasswordVM
 @{
-    ViewData["Title"] = "ForgotPassword";
+    ViewData["Title"] = "ResetPassword";
 }
-<!-- Main Start -->
-<main>
-    <section id="wrapper-forgotPassword" style="background-image: url('/assets/images/@layout.GetSectionBackgroundImages()["BasicSmallBackgroundImage"]')">
-        <div class="container page_text">
-            <h1>My Account</h1>
-            <ul>
-                <li>
-                    <a asp-controller="Home" asp-action="Index">
-                        Home
-                        <i class="fa-solid fa-angle-right"></i>
-                    </a>
-                </li>
-                <li><span>My Account</span></li>
-            </ul>
-        </div>
-    </section>
-    <section id="ressetPassword">
-        <div class="container">
-            <div class="password-area">
-                <p>
-                    Lost your password? Please enter your username or email address. You will receive a link to create a
-                    new password via email.
-                </p>
-                <form class="lost_reset_password" method="post" asp-controller="Account" asp-action="ForgotPassword">
-                    <label for="user_login">Email</label>
-                    <input class="input-text" type="email" asp-for="Email">
-                    <span class="text-danger" asp-validation-for="Email"></span>
-                    <button type="submit">Reset password</button>
+
+<div class="login-register-area section-space-y-axis-100">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="text-danger mb-2" asp-validation-summary="All"></div>
+                <form method="post" asp-controller="Account" asp-action="ResetPassword">
+                    <div class="login-form" style=" position: relative;left: 350px;top: 50px;">
+                        <h4 class="login-title">Forgot Password</h4>
+
+                        <div class="row">
+                            <div class="reset" style="display: flex;flex-direction: column; text-align: left; justify-content: space-between; height: 230px;">
+                                <input asp-for="Password" placeholder="Password" style="height: 50px; padding-left: 12px; margin-top: 25px;" />
+                                <span class="text-danger" asp-validation-for="Password"></span>
+                                <input asp-for="ConfirmPassword" placeholder="Repeat Password" style="height: 50px; padding-left: 12px;" />
+                                <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
+                                <button type="submit" style="width: 100px; height: 40px;border: none; background-color: #dd9565;color: #ffecd5;">
+                                    Send
+                                </button>
+                            </div>
+                            <input type="hidden" asp-for="Token" value="@Model.Token" />
+                            <input type="hidden" asp-for="UserId" value="@Model.UserId" />
+
+                        </div>
+                    </div>
                 </form>
             </div>
-
         </div>
-
-    </section>
-</main>
-<!-- End Main -->
-
+    </div>
+</div>
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+}
