--- a/BrideyApp/BrideyApp/wwwroot/assets/scss/style.css
+++ b/BrideyApp/BrideyApp/wwwroot/assets/scss/style.css
@@ -5296,9 +5296,11 @@ hr {
                 }
                 #login .form-login-wrap .login-bottom .register-half-bg a {
                     text-decoration: none;
-                    font-size: 15px;
+                    font-size: 16px;
                     color: #de9076;
                     font-weight: 400;
+                    position: relative;
+                    bottom: 2px;
                 }
 
 hr {
