--- a/BrideyApp/BrideyApp/Views/Shop/ProductDetail.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shop/ProductDetail.cshtml
@@ -273,17 +273,12 @@
                                                 <p style="margin-top: 22px;">Your review *</p>
 
                                                 <textarea id="" cols="30" rows="10"></textarea>
-
-                                                <div class="label">
-                                                    <label for="">Name *</label>
-                                                </div>
+                                                <p style="margin-top: 22px;">Name *</p>
                                                 <div class="input">
                                                     <input type="text">
 
                                                 </div>
-                                                <div class="label">
-                                                    <label for="">Email *</label>
-                                                </div>
+                                                <p style="margin-top: 22px;">Email *</p>
                                                 <div class="input">
                                                     <input type="email">
 
